@@ -7,6 +7,7 @@ Fluxus : (C) 2007 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 * added build option for ACCUM_BUFFER, off by default - bad tempered drivers
 * bounds checked the primitive functions
 * repl crashfix
+* removed force-load-texture and added clear-texture-cache
 
 0.13
 
